Inclusão da pasta assets e modificações no style.css

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale-1.0">
     <title>TuriPe</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
         <div class="center">
-            <div class="logo"><img src="" alt=""/></div> <!--Falta inserir a logo na pasta assets e colocar o enderenço na div class-->
+            <div class="logo"><img src="assets/logo2.png" alt=""/></div> <!--Falta inserir a logo na pasta assets e colocar o enderenço na div class-->
                 <div class="menu">
                     <a href="a">Home</a>
                     <a href="a">Aventuras</a>
@@ -18,7 +18,14 @@
                     <a href="a">Serviços</a>
                 </div>
         </div>
-    </header>
-    
+    </header> 
+    <section class="sobre">
+        <div class="extras">
+
+        </div>
+    </section>   
 </body>
 </html>
+
+<!-- terminar esse vídeo aqui https://youtu.be/ctx2h60FUIY?si=LZi5vLFwNBjJzXN4 -->
+<!-- parou no 14:20min-->
