--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale-1.0">
+    <!-- <meta charset="UTF-8"> -->
     <title>TuriPe</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 </head>
 <body>
     <header>
@@ -21,7 +21,7 @@
     </header> 
     <section class="sobre">
         <div class="extras">
-
+            <img src="/assets/img3.png"/>
         </div>
     </section>   
 </body>
